# photon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE
src/: CMakeLists.txt
src/assets/: streamer.cpp  streamer.hpp  texture.cpp  texture.hpp
src/client/: camera.hpp  player.cpp  player.hpp
src/core/: abort.hpp  app.cpp  app.hpp  entry_point.cpp  logger.hpp  window.cpp  window.hpp
src/rendering/: batch_buffer.cpp  batch_buffer.hpp  multi_fence.hpp  rendering_stack.cpp  rendering_stack.hpp  transform_buffers.cpp  transform_buffers.hpp  utils.hpp  vk_device.cpp  vk_device.hpp  vk_display.cpp  vk_display.hpp  vk_instance.cpp  vk_instance.hpp  vma_usage.hpp
src/rendering/forward/: forward.cpp  forward.hpp
src/resources/: streamer.hpp  texture.hpp
